--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ drf-yasg = "^1.21.10"
 django-cors-headers = "^4.7.0"
 django-ratelimit = "^4.1.0"
 django_filter = "25.2"
+pillow = "11.3.0"
 
 [build-system]
 requires = ["poetry-core"]
